Added the login system to the previously created login page. Added error handling for incorrect passwords and incorrect IDs. Modified the interface to add an error message to the login form if needed. Fixed a bug in the getStaffMember methods. Removal of duplicate resources (following the migration to Maven)