@@ -52,6 +52,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>application.AppLauncher</mainClass>
+                    
+                    <options>
+			            <option>--enable-native-access=javafx.graphics</option>
+			        </options>
                 </configuration>
             </plugin>
         </plugins>
